--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div class="vh-100 col-8 mx-auto">
         <h1 class="text-center">Our Team</h1>
         <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
-        <div class="d-flex flex-wrap justify-content-between">
+        <!-- milestone 1 - 2 -->
+        <ul id="lista-membri"></ul>
+
+        <!-- <div class="d-flex flex-wrap justify-content-between">
             <div class="card" style="width: 18rem;">
                 <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -55,7 +58,7 @@
                     <span>ruolo</span>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
     
