--- a/index.html
+++ b/index.html
@@ -13,53 +13,11 @@
         <h1 class="text-center">Our Team</h1>
         <p class="text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
         <!-- milestone 1 - 2 -->
-        <ul id="lista-membri"></ul>
+        <!-- <ul id="lista-membri"></ul> -->
 
-        <!-- <div class="d-flex flex-wrap justify-content-between">
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img src="./img/angela-caroll-chief-editor.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h3 >Nome</h3>
-                    <span>ruolo</span>
-                </div>
-            </div>
-        </div> -->
+        <div id="container" class="d-flex flex-wrap justify-content-between">
 
+        </div>
     </div>
     
 
